--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   client:
-    container_name: dcs-home-page
+    container_name: dcs-homepage
     stdin_open: true
     build:
       context: .
