--- a/Dockerfile-codesandbox
+++ b/Dockerfile-codesandbox
@@ -5,7 +5,7 @@ ENV GITEA_CUSTOM /data/gitea
 
 WORKDIR /data/gitea
 
-RUN mkdir conf
-RUN mkdir templates
-COPY ./conf/app.ini conf
-COPY ./templates/home.tmpl templates
+RUN mkdir /data/gitea/conf
+RUN mkdir /data/gitea/templates
+COPY ./conf/app.ini /data/gitea/conf
+COPY ./templates/home.tmpl /data/gitea/templates
