--- a/Dockerfile-codesandbox
+++ b/Dockerfile-codesandbox
@@ -7,5 +7,5 @@ WORKDIR /data/gitea
 
 RUN mkdir /data/gitea/conf
 RUN mkdir /data/gitea/templates
-COPY ./conf/app.ini /data/gitea/conf
-COPY ./templates/home.tmpl /data/gitea/templates
+COPY ./conf/app.ini /data/gitea/conf/app.ini
+COPY ./templates/home.tmpl /data/gitea/templates/home.tmpl
