--- a/Dockerfile-codesandbox
+++ b/Dockerfile-codesandbox
@@ -9,6 +9,6 @@ RUN mkdir /data/gitea/conf
 RUN mkdir /data/gitea/templates
 COPY ./conf/app.ini /data/gitea/conf/app.ini
 COPY ./templates/home.tmpl /data/gitea/templates/home.tmpl
-RUN chown -R richmahn /data
+RUN chown -R 1002:1002 /data
 USER richmahn
 WORKDIR /app
