--- a/Dockerfile-codesandbox
+++ b/Dockerfile-codesandbox
@@ -9,6 +9,7 @@ RUN mkdir /data/gitea/conf
 RUN mkdir /data/gitea/templates
 COPY ./conf/app.ini /data/gitea/conf/app.ini
 COPY ./templates/home.tmpl /data/gitea/templates/home.tmpl
-RUN chown -R 1002:1002 /data
+RUN useradd -ms /bin/bash richmahn
+RUN chown -R richmahn:richmahn /data
 USER richmahn
 WORKDIR /app
