--- a/Dockerfile-codesandbox
+++ b/Dockerfile-codesandbox
@@ -10,7 +10,7 @@ RUN mkdir /data/gitea/templates
 COPY ./conf/app.ini /data/gitea/conf/app.ini
 COPY ./templates/home.tmpl /data/gitea/templates/home.tmpl
 RUN addgroup -g 1002 richmahn
-RUN adduser -U 1002 -G 1002 -h /app -s /bin/bash richmahn
+RUN adduser -u 1002 -h /app -s /bin/bash richmahn richmahn
 RUN chown -R richmahn:richmahn /data
 USER richmahn
 WORKDIR /app
