--- a/Dockerfile-codesandbox
+++ b/Dockerfile-codesandbox
@@ -37,6 +37,7 @@ RUN mkdir /data/gitea/conf
 RUN mkdir /data/gitea/templates
 COPY ./conf/app.ini /data/gitea/conf/app.ini
 COPY ./templates/home.tmpl /data/gitea/templates/home.tmpl
+RUN chmod -R richmahn:richmahn /data
 
 VOLUME ["/data"]
 
