--- a/Dockerfile-codesandbox
+++ b/Dockerfile-codesandbox
@@ -35,7 +35,7 @@ WORKDIR /data/gitea
 
 RUN mkdir /data/gitea/conf
 RUN mkdir /data/gitea/templates
-COPY ./conf/app.ini /data/gitea/conf/app.ini
+COPY ./conf/app.ini-codesandbox /data/gitea/conf/app.ini
 COPY ./templates/home.tmpl /data/gitea/templates/home.tmpl
 RUN chown -R richmahn:richmahn /data
 
