--- a/docker-compose-codesandbox.yml
+++ b/docker-compose-codesandbox.yml
@@ -6,7 +6,8 @@ services:
     user: "${UID}:${GID}"
     environment:
       - USER_UID=1002
-      - USER_GID=1002    
+      - USER_GID=1002
+      - USER=richmahn
     build:
       context: .
       dockerfile: Dockerfile-codesandbox
