--- a/docker-compose-codesandbox.yml
+++ b/docker-compose-codesandbox.yml
@@ -7,9 +7,9 @@ services:
       - USER_UID=1002
       - USER_GID=1002
       - USER=richmahn
+    user: "${UID}:${GID}"
     build:
       context: .
       dockerfile: Dockerfile-codesandbox
     ports:
       - "3000:3000"
-      - "222:22"
