--- a/docker-compose-codesandbox.yml
+++ b/docker-compose-codesandbox.yml
@@ -11,5 +11,9 @@ services:
     build:
       context: .
       dockerfile: Dockerfile-codesandbox
+    volumes:
+      - "${PWD}/templates:/data/gitea/templates"
+      - "${PWD}/options/locale:/data/gitea/options/locale"
+      - "${PWD}/conf/app.ini-codesandbox:/data/gitea/conf/app.ini"      
     ports:
       - "3000:3000"
