--- a/docker-compose-codesandbox.yml
+++ b/docker-compose-codesandbox.yml
@@ -7,6 +7,7 @@ services:
       - USER_UID=1002
       - USER_GID=1002
       - USER=richmahn
+    user: "1002:1002"
     build:
       context: .
       dockerfile: Dockerfile-codesandbox
