--- a/.codesandbox/tasks.json
+++ b/.codesandbox/tasks.json
@@ -7,7 +7,7 @@
     "docker-compose up": {
       "name": "docker-compose up",
       "command": "docker-compose -f docker-compose-codesandbox.yml up",
-      "runAtStart": true
+      "runAtStart": false
     }
   }
 }
